--- a/CopaFilmes/CopaFilmes.Client/package.json
+++ b/CopaFilmes/CopaFilmes.Client/package.json
@@ -6,11 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^3.4.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.3.1",
+    "mdbreact": "^4.25.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.1.3",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
